# Aquila_next_tauri

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs
src/app/: page.tsx
src/components/: DiscordOAuthButton.tsx
