[package]
name = "tauri-nextjs-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["Moore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_nextjs_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-oauth = "2"
tauri-plugin-shell = "2"

rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
reqwest = {version = "0.12", features = ["json"] }
keyring = "2"
dotenvy = "0.15"
once_cell = "1.19"

tokio = {version = "1", features = ["rt-multi-thread", "macros"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
